# FFMPEG-Audio-Encoder

./: .gitignore  FFMPEG Audio Encoder v0.1.py  FFMPEG Audio Encoder v0.2.py  FFMPEG Audio Encoder v0.3.py  FFMPEG Audio Encoder v0.4.py  FFMPEG Audio Encoder v0.45.py  FFMPEG Audio Encoder v0.46.py  FFMPEG Audio Encoder v0.47.py  FFMPEG Audio Encoder v0.48.py  FFMPEG Audio Encoder v0.50.py  FFMPEG Audio Encoder v0.51.py  FFMPEG Audio Encoder v0.7.py  FFMPEG Audio Encoder v1.0.py  FFMPEG Audio Encoder v1.1 Beta.py  FFMPEG Audio Encoder v1.1.py  FFMPEG Audio Encoder v1.2 Beta.py  FFMPEG Audio Encoder v1.2.py  FFMPEG Audio Encoder v1.21 Beta.py  FFMPEG Audio Encoder v1.22 Beta.py  FFMPEG Audio Encoder v1.23 Beta.py  FFMPEG Audio Encoder v1.24 Beta.py  FFMPEG Audio Encoder v1.25 Beta.py  FFMPEG Audio Encoder v1.3 Beta.py  FFMPEG Audio Encoder v1.3.py  FFMPEG Audio Encoder v1.31 Beta.py  FFMPEG Audio Encoder v1.31.py  FFMPEG Audio Encoder v1.32.py  FFMPEG Audio Encoder v1.35 Beta.py  FFMPEG Audio Encoder v1.4 Beta.py  FFMPEG Audio Encoder v1.41 Beta.py  FFMPEG Audio Encoder v1.42 Beta.py  FFMPEG Audio Encoder v1.43 Beta.py  FFMPEG Audio Encoder v1.44 Beta.py  FFMPEG Audio Encoder v1.45 Beta.py  FFMPEG Audio Encoder v1.45.py  FFMPEG Audio Encoder v1.46 Beta.py  FFMPEG Audio Encoder v1.47.py  FFMPEG Audio Encoder v1.5.py  FFMPEG Audio Encoder v1.65.py  FFMPEG Audio Encoder v1.7.py  (+16 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Apps/MediaInfo/: History.txt  ReadMe.txt
Apps/MediaInfoCLI/: Help.txt  History.txt  Info_Parameters.txt
Apps/fdkaac/: FDK-AAC-Help.txt
(+43 files in other folders)
